fix(slideshow): resolve issue with text & button being temporarily visible until animation triggered

--- a/src/components/background-slideshow/background-slideshow.component.scss
+++ b/src/components/background-slideshow/background-slideshow.component.scss
@@ -8,6 +8,12 @@
   width: 100%;
 }
 
+// initial state before animation is triggered
+.swiper-slide h1,
+button {
+  opacity: 0;
+}
+
 .swiper-button-next,
 .swiper-button-prev {
   color: var(--mat-sys-on-primary);
